--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -505,7 +505,9 @@ block content
                             img(class="zoom" data-zoom='https://images.wallpaperscraft.com/image/mountains_reflection_wood_canada_colors_45566_2048x1152.jpg' src="http://www.aquamater.it/wp-content/uploads/2019/02/cropped-videoblocks-plumbing-plastic-pipes-cold-and-hot-water-supply-taps-60fps_rburcjt3x_thumbnail-full01.png")
                     section
                         +b.deadlines
-                            +e.header ЭТАПЫ ВОДОСНАБЖЕНИЯ И/ИЛИ КАНАЛИЗАЦИИ “ПОД КЛЮЧ”
+                            +b.title
+                                +e.wrap 
+                                    +e.text Этапы водоснабжения и/или канализации “под ключ”
                             +e.wrapper
                                 +e.item
                                     +e.stage
@@ -706,21 +708,25 @@ block content
 
                     
 
-                    section.row
-                        .col.col_size_12.col_size-sm_8.col_offset-sm_2
-                            +b.tabs
-                                +e.item
-                                    +e.title 123
-                                    +e.text 123
-                                +e.item
-                                    +e.title 123
-                                    +e.text 123
-                                +e.item
-                                    +e.title 123
-                                    +e.text 123
-                                +e.item
-                                    +e.title 123
-                                    +e.text 123
+                    section
+                        +b.title
+                            +e.wrap 
+                                +e.text Часто задаваемые вопросы
+                        .row
+                            .col.col_size_12.col_size-sm_8.col_offset-sm_2
+                                +b.tabs
+                                    +e.item
+                                        +e.title 123
+                                        +e.text 123
+                                    +e.item
+                                        +e.title 123
+                                        +e.text 123
+                                    +e.item
+                                        +e.title 123
+                                        +e.text 123
+                                    +e.item
+                                        +e.title 123
+                                        +e.text 123
                     +b.reviews
                         +e.title Отзывы
                         //- +e.prev
@@ -776,7 +782,7 @@ block content
                 +b.price
                     .container
                         +e.wrapper
-                            +e.title РАССЧИТАТЬ КОММЕРЧЕСКУЮ СТОИМОСТЬ 
+                            +e.title Рассчитать коммерческую стоимость
                             +e.text
                                 blockquote 
                                     p. 
@@ -877,27 +883,29 @@ block content
                 
                 +b.triggers
                     .container
-                        +e.title ВАШИ ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА С ООО”БК ИНВЕНТ”
+                        +e.title Ваши преимущества сотрудничества с ОО ”БК Инвент”
                         +e.items
                             +e.item 
-                                img(src='images/i1.png')
+                                img(src='images/i12.png')
                                 |Вы доверяете свою задачу “подключить инженерные сети” полностью нашим специалистам, которые имеют опыт более 8 лет 
                             +e.item 
-                                img(src='images/i2.png') 
+                                img(src='images/i17.png') 
                                 |Ваши пояжелания всегда учитываются в реализации проекта, а специалисты в своем решении учитывают экономическую выгоду и технические стандарты 
                             +e.item 
-                                img(src='images/i3.png')
+                                img(src='images/i10.png')
                                 |Вы получаете проект водоснабжения/водоотведения в формате 3D, который прошел нормоконтроль и имеет знак качества 
                             +e.item 
-                                img(src='images/i4.png')
+                                img(src='images/i6.png')
                                 | Вы имеете правовую защиту -  подрядный договор, в котором детально прописаны наши обязанности и сроки по выполнению работ, а также гарантия 24 месяца
                             +e.item 
-                                img(src='images/i5.png')
+                                img(src='images/i14.png')
                                 |Ваш проект обеспечен квалифицированными кадрами и ресурсами - БК Инвент состоит в СРО проектном, СРО строительном, сертифицирована ISO, по завершении проходит внутреннюю экспертизу
                 
                 .container
                     +b.stages
-                        +e.header Как мы работаем
+                        +b.title
+                            +e.wrap 
+                                +e.text Как мы работаем
                         +e.items
                             +e.item
                                 +e.image
@@ -933,12 +941,38 @@ block content
                                 +e.title Сдача проекта
                                 +e.text Вы получаете водоснабжения, папку клиенты, лицевой счет и первую квитанцию
                                 +e.line
+                
+                    +b.title
+                        +e.wrap 
+                            +e.text Наши партнёры
+                    +b.logos
+                        .logos__item
+                            img(src="images/logo1.jpg")
+                        .logos__item
+                            img(src="images/logo2.jpg")
+                        .logos__item
+                            img(src="images/logo3.jpg")
+                        .logos__item
+                            img(src="images/logo4.jpg")
+                        .logos__item
+                            img(src="images/logo5.jpg")
+                        .logos__item
+                            img(src="images/logo6.jpg")
+                        .logos__item
+                            img(src="images/logo7.jpg")
+                        .logos__item
+                            img(src="images/logo8.jpg")
+                        .logos__item
+                            img(src="images/logo9.jpg")
+                    
+                
+                
                 .form-box
                     .form-box__wrapper
                         .form-box__title Заполните контактную информацию
                         form.form.ajax
                             .form-box__items
-                                .form-box__description ДЛЯ ТОГО, ЧТОБЫ НАЧАТЬ РАБОТУ ПРЯМО СЕЙЧАС, НЕОБХОДИМО ЗАПОЛНИТЬ ФОРМУ:
+                                .form-box__description Для того, чтобы начать работу прямо сейчас, необходимо заполнить форму:
                                 .form-box__item
                                     .input.input_type_name
                                         .input__box
@@ -978,7 +1012,11 @@ block content
                 .container
                     p Вы можете скачать материал, который содержит в себе следующую информацию: какая документация понадобится от вас в процессе подключения водоснабжения, какая этапность подключения воды, и какой пакет документов вы обязаны иметь на выходе (предоставляем мы), чтобы пользоваться водопроводом законно и гарантированно. 
             
-            
+                    +b.title
+                        +e.wrap 
+                            +e.text Как нас найти
+                script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
+                .map#map
 
 
             //- +b.footer
