--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1654,6 +1654,9 @@ ul.list
 .more
     display inline-block
     color #656565
+    border 1px solid #bebec0
+    border-radius 4px 
+    padding 2px 10px 2px 8px
     font-size 13px
     display flex
     align-items center
@@ -1683,6 +1686,7 @@ ul.list
             top -2px
     &:hover
         color #5786e6
+        border 1px solid #5786e6
         .more__arrow
             width 25px
             right -5px
@@ -1703,7 +1707,7 @@ ul.list
         font-size 14px
         line-height 1.3em
         color #555
-        margin-bottom 30px
+        margin-bottom 25px
     &__label
         font-size 18px
         line-height 1.3em
@@ -1711,6 +1715,10 @@ ul.list
         border-width 600
         margin-bottom 10px
     &__wrapper
+        box-shadow 0 5px 20px 0px #dadada
+        @media (min-width 360px)
+            border-radius 10px
+            box-shadow 0 6px 20px 0px #d0d0d0
         //display table
         // box-shadow 0px 4px 20px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 2px rgba(195, 195, 195, 0.09)
         // background #fdfdfd
@@ -1735,7 +1743,7 @@ ul.list
             border-top none
             border-radius 0 0 8px 8px 
         @media (min-width 600px)
-            padding 20px 80px 40px 80px
+            padding 20px 80px 5px 80px
     &__item
         margin-bottom 30px
         width auto
@@ -1749,10 +1757,10 @@ ul.list
         line-height 1em
         padding 20px 10px
         text-align center
-        background #11244d
+        background #ddd
         //left 40px
-        color #fff
-        font-weight 300
+        color #3d3d3d
+        font-weight 400
         border-radius 8px 8px 0 0 
 
 
@@ -2606,8 +2614,9 @@ ul.list
         display flex
         align-items center
         img
-            margin-right 20px
+            margin 0 15px 0 0
             width auto
+            max-width 50px
     &__title
         font-size 22px 
         @media (min-width 700px)
@@ -2685,3 +2694,91 @@ img.zoom
         // top 50%
         // left 50%
         // transform translate(-50%, -50%)
+
+.logos
+    text-align center 
+    display flex
+    flex-wrap wrap
+    justify-content center
+    &__item
+        width calc(33% - 10px)
+        margin 5px
+        text-align center 
+        img
+         max-width 156px
+        @media (min-width 640px)
+            width calc(20% - 20px)
+            margin 10px
+        @media (min-width 1140px)
+            width calc(20% - 20px)
+
+
+.map
+    margin-top 50px
+    border-top 1px solid #d1ddec
+    width 100%
+    height 300px
+    @media (min-width: 790px)
+        height 400px
+
+.title
+    position relative
+    margin 30px 0
+    &__wrap
+        &:before
+            @media (min-width 550px)
+                display block
+            display none
+            content " "
+            position absolute
+            width 100%
+            height 4px
+            background #aabfe7
+            top calc(50% - 2px)
+            left 0
+        @media (min-width 550px)
+            padding 20px
+    &__text
+        font-size 28px
+        line-height 1.2em
+        background #fff
+        padding 0 20px
+        text-align center
+        background #fff
+        margin auto
+        display table
+        position relative
+        border-radius 30px
+        @media (min-width 550px)
+            &:before
+            &:after
+                display block
+                content " "
+                position absolute
+                width 4px
+                height 4px
+                background #aabfe7
+                top calc(50% - 2px) 
+            &:before
+                left 0
+                border-radius 0 10px 10px 0
+            &:after 
+                right 0
+                border-radius 10px 0 0 10px
+    &:before
+    &:after 
+        @media (min-width 550px)
+            display block
+        display none
+        content " "
+        position absolute
+        width 14px
+        height 14px
+        background #aabfe7
+        border-radius 20px
+        top calc(50% - 7px)
+    &:before
+        left -10px
+    &:after 
+        right -10px
+         
