--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -507,7 +507,7 @@ block content
                         +b.deadlines
                             +b.title
                                 +e.wrap 
-                                    +e.text Этапы водоснабжения и/или канализации “под ключ”
+                                    +e.text Этапы подключения
                             +e.wrapper
                                 +e.item
                                     +e.stage
@@ -586,11 +586,13 @@ block content
 
                                     +e.time-wrapper
                                         +e.time Сроки выполнения: 14 дней
+                        .row
+                            .col.col_size_12.col_size-sm_8.col_offset-sm_2
+                                //hr
+                                p 
+                                    b Если Вы хотите получить детальный бизнес-процесс подключения к сетям водоснабжения и/или водоотведения, разработанный компанией ООО “БК Инвент”, вы можете его получить на электронную почту.
+                                p Мы вышлем Вам на почту процесс, который происходит изнутри, для того, чтобы получить вышеперечисленные результаты!
                         hr
-                        p 
-                            b Если Вы хотите получить детальный бизнес-процесс подключения к сетям водоснабжения и/или водоотведения, разработанный компанией ООО “БК Инвент”, вы можете его получить на электронную почту.
-                        p Мы вышлем Вам на почту процесс, который происходит изнутри, для того, чтобы получить вышеперечисленные результаты!
-
                     +b.stock.stock_type_slider
                         +e.wrapper
                             .cases__next
@@ -605,7 +607,7 @@ block content
                                             |ча организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
                                         +e.btn
                                             +b.btn.btn_view_action
-                                                +e.text Подробнее о проекте
+                                                +e.text Узнать больше
                                 +e.item
                                     +e.img
                                         img(src="https://tdmspb.ru/files/free_data/-gallery-skidka_smesitel-1527660823.png")
@@ -615,7 +617,7 @@ block content
                                             |ча организации, в особенности же укрепление и развитие структуры играет важную роль в формировании новых предложений. Таким образом начало повседневной работы по формированию позиции требуют от нас анализа 
                                         +e.btn
                                             +b.btn.btn_view_action
-                                                +e.text Подробнее о проекте
+                                                +e.text Узнать больше
                                     
 
                     +b.cases
@@ -883,7 +885,7 @@ block content
                 
                 +b.triggers
                     .container
-                        +e.title Ваши преимущества сотрудничества с ОО ”БК Инвент”
+                        +e.title Ваши преимущества сотрудничества с ООО ”БК Инвент”
                         +e.items
                             +e.item 
                                 img(src='images/i12.png')
@@ -900,7 +902,9 @@ block content
                             +e.item 
                                 img(src='images/i14.png')
                                 |Ваш проект обеспечен квалифицированными кадрами и ресурсами - БК Инвент состоит в СРО проектном, СРО строительном, сертифицирована ISO, по завершении проходит внутреннюю экспертизу
-                
+                            +e.item 
+                                img(src='images/i35.png')
+                                |Вы получаете высокий сервис оказания услуги, с применением высокотехнологичного и современного подхода
                 .container
                     +b.stages
                         +b.title
@@ -909,6 +913,7 @@ block content
                         +e.items
                             +e.item
                                 +e.image
+                                    img(src='images/i63.png')
                                 +e.title Заявка
                                 +e.text 
                                     |Вы звоните или заполняете форму обратной связи
@@ -918,26 +923,31 @@ block content
                                 +e.line
                             +e.item
                                 +e.image
+                                    img(src='images/i64.png')
                                 +e.title Бесплатная консультация
                                 +e.text Получаете полную консультацию
                                 +e.line
                             +e.item
                                 +e.image
+                                    img(src='images/i60.png')
                                 +e.title Выезжает инженера на объект 
                                 +e.text К Вам БЕСПЛАТНО выезжает на объект инженер и делает необходимые замеры, формирует смету
                                 +e.line
                             +e.item
                                 +e.image
+                                    img(src='images/i66.png')
                                 +e.title Подписание договора
                                 +e.text Вы получаете коммерческое предложение и договор на согласование. После подписания договора, вносите первый аванс
                                 +e.line
                             +e.item
                                 +e.image
+                                    img(src='images/i31.png')
                                 +e.title Выполнение работы
                                 +e.text Мы делаем поэтапно работу, информируем Вас о проделанной работе посредством того способа связи, который Вам удобен
                                 +e.line
                             +e.item
                                 +e.image
+                                    img(src='images/i65.png')
                                 +e.title Сдача проекта
                                 +e.text Вы получаете водоснабжения, папку клиенты, лицевой счет и первую квитанцию
                                 +e.line
